[package]
name = "audio-bicycle"
description = "A two-way audio communicator using VBAN and PulseAudio"
keywords = ["audio", "vban", "pulseaudio"]
categories = ["command-line-utilities"]
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/octylFractal/audio-bicycle"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0.38"

async-trait = "0.1.64"
futures = "0.3.26"

once_cell = "1.17.1"

toml = "0.7.2"

directories = "4.0.1"

libpulse-binding = "2.27.1"
libpulse-simple-binding = "2.27.1"

binrw = "0.11.1"

arrayvec = "0.7.2"

[dependencies.clap]
version = "4.1.6"
features = ["derive"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.tokio]
version = "1.25.0"
features = ["rt-multi-thread", "macros", "sync", "io-std", "io-util", "net"]

[dependencies.tokio-util]
version = "0.7.7"
features = ["compat", "io", "io-util"]
