[package]
name = "audio-bicycle"
description = "A two-way audio communicator using VBAN and PulseAudio"
keywords = ["audio", "vban", "pulseaudio"]
categories = ["command-line-utilities"]
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/octylFractal/audio-bicycle"
version = "0.1.1-dev"
edition = "2021"

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
thiserror = "1.0.59"

futures = "0.3.30"

once_cell = "1.19.0"

toml = "0.8.12"

directories = "5.0.1"

libpulse-binding = "2.28.1"
libpulse-simple-binding = "2.28.1"

binrw = "0.13.3"

arrayvec = "0.7.4"

[dependencies.clap]
version = "4.5.4"
features = ["derive"]

[dependencies.serde]
version = "1.0.200"
features = ["derive"]

[dependencies.tokio]
version = "1.37.0"
features = ["rt-multi-thread", "macros", "sync", "io-std", "io-util", "net", "time"]

[dependencies.tokio-util]
version = "0.7.10"
features = ["compat", "io", "io-util"]
